[#nossiue] Fix grpc it-test failure