@@ -32,9 +32,7 @@ import org.junit.runner.RunWith;
  */
 @RunWith(PinpointPluginTestSuite.class)
 @PinpointAgent(AgentPath.PATH)
-@Dependency({"io.grpc:grpc-stub:[1.23.0,1.41.max]", "io.grpc:grpc-netty:[1.23.0]", "io.grpc:grpc-protobuf:[1.23.0]",
-        PluginITConstants.VERSION})
-@JvmArgument("-XX:MaxPermSize=768m")
+@Dependency({"io.grpc:grpc-all:[1.23.0,1.32.max]", PluginITConstants.VERSION})
 @ImportPlugin("com.navercorp.pinpoint:pinpoint-grpc-plugin")
 @PinpointConfig("pinpoint-grpc-plugin-test.config")
 public class Grpc_1_23_0_to_IT extends GrpcITBase {
